# SnakeGame

./: CMakeLists.txt
include/: Point.h  acts.h  game.h  object.h  server.h  snake.h
src/: Point.cpp  game.cpp  main.cpp  object.cpp  server.cpp  snake.cpp
